fixed footer alignment, overall formatting

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -7,8 +7,8 @@ body {
 }
 
 .main-header {
-    display:flex;
     margin-top:0;
+    height: 75px;
     background-color: rgb(144, 188, 231);
     justify-content: center;
     padding: 20px;
@@ -17,6 +17,10 @@ body {
 
 .header-logo {
     height:75px;
+}
+
+.main-content {
+    min-height: calc(100vh - 135px - 65px);
 }
 
 .title {
@@ -30,12 +34,13 @@ body {
     justify-content: center;
     flex-wrap:wrap;
     padding: 10px;
+    padding-bottom: 50px;
 }
 
 .profile {
     margin-top: 10px;
     display:flex;
-    max-width:700px
+    max-width:700px;
 }
 
 .profile-basics {
@@ -58,14 +63,14 @@ body {
 }
 
 
-
 .footer {
     background-color: rgb(144, 188, 231);
     padding: 20px 0;
     text-align: center;
-    position: fixed;
+    position: 0;
     width: 100%;
     bottom: 0;
+    height: 25px;
 }
 
 .footer-content {
